Wed Nov 26 10:20:51 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/Servant_To_Reference_Test/server.cpp:

	  Fixed a warning in g++ builds.

Wed Nov 26 15:20:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* TAOACE.dsw:
	  Messaging needs PortableServer so added dependency

Wed Nov 26 14:32:33 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* docs/tutorials/Quoter/Simple/Client/Quoter_Simple_Client.mpc:
	* docs/tutorials/Quoter/Simple/Impl-Repo/Quoter_Simple_Impl_Repo.mpc:
	* docs/tutorials/Quoter/Simple/ImprovedServer/Quoter_Simple_ImprovedServer.mpc:
	* docs/tutorials/Quoter/Simple/Persistent/Quoter_Simple_Persistent.mpc:
	* docs/tutorials/Quoter/Simple/Server/Quoter_Simple_Server.mpc:
	  Add missing lib to fix link erros in our SunForte 8 build.

Wed Nov 26 14:21:11 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* examples/Event_Comm/Event_Comm_i.cpp:
	  If ACE_HAS_REGEX is defined include ace/OS_NS_regex.h to fix compile
	  errors in Solaris Forte8 build.

Wed Nov 26 14:13:22 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/orbsvcs/FtRtEvent/Utils/activate_with_id.h:
	  Added missing const qualifier

Wed Nov 26 14:05:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* orbsvcs/Naming_Service/Naming_Service.bor:
	* orbsvcs/Naming_Service/NT_Naming_Service.bor:
	* orbsvcs/Time_Service/Time_Service_Clerk.bor:
	* orbsvcs/Time_Service/Time_Service_Server.bor:
	* include/makeinclude/build_example.bor:
	* examples/Quoter/Factory_finder.bor:
	* examples/Quoter/Generic_factory.bor:
	* examples/Quoter/Server.bor:
	* examples/RTScheduling/Fixed_Priority_Scheduler/Fixed_Priority_Scheduler_Starter.bor:
	* examples/RTScheduling/Fixed_Priority_Scheduler/Fixed_Priority_Scheduler_Test.bor:
	* tests/InterOp-Naming/server.bor:
	  Add Messaging library to fix link errors in BCB6 Static Build.

Wed Nov 26 10:47:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/PSS/PSDL_Scope.cpp: